# wb

./: .dockerignore  .gitignore  Dockerfile  database.db  database.py  database.sqbpro  main.py  pyproject.toml  run.py
templates/: form.html
tr1/: admin.html  change_passwd.html  chocolate.html  index.html  items.html  login.html  search.html  signup.html  user.html
tr1/images/: text.txt
