[tool.poetry]
name = "vuln-web"
version = "0.1.0"
description = ""
authors = ["kas054 <kadurova.anastasia2002@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
python-multipart = "^0.0.6"
uvicorn = "^0.22.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
